<resources>

    <string name="app_name">MiniStockbitApp</string>

    <string name="code_stock">BNB</string>
    <string name="company_name">Binance</string>
    <string name="price">4,000</string>
    <string name="percentage">+100(+1.23%)</string>

    <string name="login_with_google">Login with Google</string>
    <string name="login_with_facebook">Login with Facebook</string>

    <string name="network_not_available">Tidak ada koneksi internet</string>
    <string name="network_available">Terhubung ke internet</string>

    <string name="or">Atau</string>
    <string name="masuk">Masuk</string>
    <string name="email_not_valid">Username atau Email Tidak Valid</string>
    <string name="password_not_valid">Password Harus lebih dari %1$d</string>
    <string name="username_or_email">Username or Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Lupa Password</string>
    <string name="login">Login</string>
    <string name="login_with_fingerprint">Masuk dengan Fingerprint</string>
    <string name="sign_up_now">Belum Punya akun ? <font color='#4ca762'>Daftar sekarang</font></string>

    <string name="watchlist">Watchlist</string>
    <string name="datafeed">Data Feed</string>

    <string name="changes_info">%1$s (%2$s%%)</string>

    <string name="generic_error">Something went wrong.</string>
    <string name="no_internet">%1$s Tarik kebawah untuk mencoba lagi</string>
    <string name="no_results">Tidak ada data ditemukan</string>

</resources>