<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp">

    <TextView
        android:id="@+id/codeTextView"
        style="@style/Title.Medium.Bold.Black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/code_stock" />

    <TextView
        android:id="@+id/companyTextView"
        style="@style/Subtitle.Medium.Light"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/codeTextView"
        tools:text="@string/company_name" />

    <TextView
        android:id="@+id/priceTextView"
        style="@style/Title.Medium.Bold.Black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/price" />

    <TextView
        android:id="@+id/percentageTextView"
        style="@style/Subtitle.Medium.Light"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/priceTextView"
        tools:text="@string/percentage" />

</androidx.constraintlayout.widget.ConstraintLayout>
