<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/loginFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="@dimen/margin_16dp"
    android:paddingEnd="@dimen/margin_16dp">

    <include
        android:id="@+id/googleButton"
        layout="@layout/view_google_login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_24dp"
        app:layout_constraintTop_toTopOf="parent" />

    <include
        android:id="@+id/facebookButton"
        layout="@layout/view_facebook_login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_8dp"
        app:layout_constraintTop_toBottomOf="@id/googleButton" />

    <View
        android:id="@+id/dividerLeftView"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_marginEnd="@dimen/margin_8dp"
        android:background="@color/gray"
        app:layout_constraintBottom_toBottomOf="@id/orTextView"
        app:layout_constraintEnd_toStartOf="@id/orTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/orTextView" />

    <View
        android:id="@+id/dividerRightView"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_marginStart="@dimen/margin_8dp"
        android:background="@color/gray"
        app:layout_constraintBottom_toBottomOf="@id/orTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/orTextView"
        app:layout_constraintTop_toTopOf="@id/orTextView" />

    <TextView
        android:id="@+id/orTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/or"
        android:textColor="@color/gray_400"
        app:layout_constraintEnd_toStartOf="@id/dividerRightView"
        app:layout_constraintStart_toEndOf="@id/dividerLeftView"
        app:layout_constraintTop_toBottomOf="@+id/facebookButton" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailTextInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_24dp"
        android:background="@android:color/transparent"
        android:hint="@string/username_or_email"
        app:errorContentDescription="@string/email_not_valid"
        app:hintTextAppearance="@style/Subtitle.Medium.Light"
        app:layout_constraintTop_toBottomOf="@id/orTextView">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordTextInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_8dp"
        android:background="@android:color/transparent"
        android:hint="@string/password"
        app:endIconMode="password_toggle"
        app:hintTextAppearance="@style/Subtitle.Medium.Light"
        app:layout_constraintTop_toBottomOf="@id/emailTextInput">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/forgotTextView"
        style="@style/Subtitle.Green.Bold"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/margin_16dp"
        android:text="@string/forgot_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordTextInput" />

    <Button
        android:id="@+id/loginButton"
        style="?attr/materialButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_16dp"
        android:paddingVertical="@dimen/margin_16dp"
        android:text="@string/login"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@id/forgotTextView" />

    <Button
        android:id="@+id/fingerprintButton"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_16dp"
        android:paddingVertical="@dimen/margin_16dp"
        android:text="@string/login_with_fingerprint"
        android:textAllCaps="false"
        android:textColor="@color/green"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/loginButton"
        app:strokeColor="@color/green" />

    <TextView
        style="@style/Subtitle.Black.Bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/margin_16dp"
        android:text="@string/sign_up_now"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/fingerprintButton"
        app:layout_constraintStart_toStartOf="@+id/fingerprintButton"
        app:layout_constraintTop_toBottomOf="@id/fingerprintButton" />

</androidx.constraintlayout.widget.ConstraintLayout>
